fix(events-ms): update method to convert LocalDate to LocalDateTime for querying events